Search API 1.x, dev (xxxx-xx-xx):
---------------------------------
- #2961537 by drunken monkey: Increased Core dependency to Drupal 8.5.
- #2959809 by drunken monkey, Rob230, mkalkbrenner, borisson_: Fixed small
  coding mistake in the "URL field" processor.
- #2960931 by drunken monkey, borisson_: Fixed viewing of multiple content
  entity items.

Search API 1.8 (2018-04-16):
----------------------------
- #2960854 by nedjo, drunken monkey: Fixed "Database search defaults" index.
- #2930839 by drunken monkey: Update tests according to latest PHPUnit
  compatibility changes
- #2921022 by drunken monkey, marcvangend: Fixed automatic task execution with
  Drush.
- #2955887 by drunken monkey, borisson_: Added a way to re-execute a query.
- #2925464 by drunken monkey, borisson_, .jch: Fixed problem with missing "NOT
  NULL" attribute in database backend.
- #2953266 by drunken monkey, borisson_: Added a helper method for
  "selected"/"default" checks.
- #2953267 by drunken monkey, borisson_: Fixed REST dependency of Views test
  module.
- #2945870 by Dropa, drunken monkey: Fixed timezone of indexed date strings.
- #2948659 by drunken monkey, borisson_, bskibinski: Added support for HTML5
  placeholder in Views exposed filters.
- #2951055 by bradjones1, borisson_, drunken monkey: Fixed documentation for
  IndexInterface::addField().
- #2945560 by mkalkbrenner, drunken monkey, borisson_: Fixed handling of
  existing highlighting data in Highlight processor.
- #2946386 by drunken monkey, borisson_: Fixed typo in Query::getAbortMessage().
- #2945675 by drunken monkey, borisson_: Unified use of self and static.

Search API 1.7 (2018-02-23):
----------------------------
- #2922525 by drunken monkey, borisson_: Changed "Index items immediately" to
  delay indexing until the end of the page request.
- #2930720 by drunken monkey, borisson_: Added a UI for rebuilding the tracking
  table for an index.
- #2912246 by drunken monkey: Fixed inconsistent array indices in query