@@ -197,7 +197,12 @@ class ConfigOverrideKernelTest extends KernelTestBase {
     // Verify that overriding "status" prevents the server's indexes from being
     // disabled when attempting to disable the server.
     $GLOBALS['config']['search_api.server.test_server']['status'] = TRUE;
-    $this->server->disable()->save();
+    \Drupal::configFactory()->clearStaticCache();
+    /** @var \Drupal\search_api\Entity\SearchApiConfigEntityStorage $server_storage */
+    $server_storage = \Drupal::entityTypeManager()
+      ->getStorage('search_api_server');
+    $server = $server_storage->loadOverrideFree($server->id());
+    $server->disable()->save();
     \Drupal::configFactory()->clearStaticCache();
     $index = Index::load($this->index->id());
     $this->assertTrue($index->status());
@@ -206,9 +211,6 @@ class ConfigOverrideKernelTest extends KernelTestBase {
 
     // Verify that overrides are not present when loading the server
     // override-free.
-    /** @var \Drupal\search_api\Entity\SearchApiConfigEntityStorage $server_storage */
-    $server_storage = \Drupal::entityTypeManager()
-      ->getStorage('search_api_server');
     $server = $server_storage->loadOverrideFree($server->id());
     $this->assertEquals('Test server', $server->label());
   }
