@@ -1,5 +1,7 @@
 Search API 1.x, dev (xxxx-xx-xx):
 ---------------------------------
+- #2936630 by drunken monkey, borisson_: Adapted override detection code to use
+  Config::hasOverrides().
 - #2961537 by drunken monkey: Increased Core dependency to Drupal 8.5.
 - #2959809 by drunken monkey, Rob230, mkalkbrenner, borisson_: Fixed small
   coding mistake in the "URL field" processor.
